--- a/StudyTimer/Presentation/StudyTimer.MVC/wwwroot/email-templates/verify-email.html
+++ b/StudyTimer/Presentation/StudyTimer.MVC/wwwroot/email-templates/verify-email.html
@@ -180,7 +180,7 @@
                                                         <tr>
                                                             <td style="width:250px;">
 
-                                                                <img height="auto" src="https://i.hizliresim.com/ar09v2q.png" style="border:0;display:block;outline:none;text-decoration:none;width:100%;" width="64">
+                                                                <img height="auto" src="https://pbs.twimg.com/profile_images/1662470497957826560/eGLIdFSy_400x400.jpg" style="border:0;display:block;outline:none;text-decoration:none;width:100%;" width="64">
 
                                                             </td>
                                                         </tr>
